shs-api.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: shs-api
spec:
  replicas: 1
  selector:
    matchLabels:
      app: shs-api
  template:
    metadata:
      labels:
        app: shs-api
    spec:
      containers:
      - name: shs-api
        image: miss4chan/shs.api:main
        imagePullPolicy: Always
        ports:
        - containerPort: 80
        - containerPort: 443
---
apiVersion: v1
kind: Service
metadata:
  name: shs-api
spec:
  selector:
    app: shs-api
  ports:
    - name: http
      protocol: TCP
      port: 80
      targetPort: 80
    - name: https
      protocol: TCP
      port: 443
      targetPort: 443
  type: ClusterIP
