ingress-shs-api.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: shs-api-ingress
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: web, websecure
spec:
  rules:
  - host: shs-api.local
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: shs-api
            port:
              number: 80
  tls:
  - hosts:
    - shs-api.local
